<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/activity_deezer_toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">
        <!-- THIS IS WHAT IS VISIBLE ON SCREEN:-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".DeezerSearch">

            <ImageButton
                android:id="@+id/deezerImage"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/deezerlogo" />


            <TextView
                android:id="@+id/SearchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/deezerImage"
                android:layout_marginTop="30dp"
                android:textSize="50dp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/searchText"/>


            <EditText
                android:id="@+id/artistSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/SearchText"
                android:layout_marginTop="50dp"
                android:inputType="textPersonName"
                android:hint="@string/artistTypeHint" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/artistSearch"
                android:text="@string/searchButton" />

            <Button
                android:id="@+id/favourites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/searchButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/favouriteButton"
                style="@android:style/ButtonBar"/>

            <Button
                android:id="@+id/helpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/favourites"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="50dp"
                style="@android:style/Animation.Dialog"
                android:text="@string/helpButton"/>

        </RelativeLayout>

        <!-- THIS IS WHAT IS WHAT POPS OUT FROM THE SIDE:-->
        <com.google.android.material.navigation.NavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/activity_deezer_header_layout"
            app:menu="@menu/menu_deezer_drawer"
            android:id="@+id/nav_view"/>

    </androidx.drawerlayout.widget.DrawerLayout>

    </LinearLayout>

