<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/activity_deezer_toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">
        <!-- THIS IS WHAT IS VISIBLE ON SCREEN:-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".DeezerDetails">

                <ImageView
                    android:id="@+id/albumCover"
                    android:layout_width="match_parent"
                    android:layout_height="400sp"
                    app:srcCompat="@drawable/ic_launcher_background" />

                <TextView
                    android:id="@+id/songName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/albumCover"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="10dp"
                    android:textSize="15dp"
                    android:text="@string/songName" />

                <TextView
                    android:id="@+id/albumName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/songName"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="10dp"
                    android:textSize="15dp"
                    android:text="@string/albumName"
                    />

                <TextView
                    android:id="@+id/songDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/albumName"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="10dp"
                    android:textSize="15dp"
                    android:text="@string/duration"
                    />

                <CheckBox
                    android:id="@+id/favouriteButton"
                    style="?android:attr/starStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/songDuration"
                    android:layout_centerHorizontal="true"
                    android:paddingVertical="10dp"
                    android:textSize="15dp"
                    android:text="@string/favourite" />

            </RelativeLayout>
        <!-- THIS IS WHAT IS WHAT POPS OUT FROM THE SIDE:-->
        <com.google.android.material.navigation.NavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/activity_deezer_header_layout"
            app:menu="@menu/menu_deezer_drawer"
            android:id="@+id/nav_view"/>

    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>